force-app/main/default/objects/Deployment_Job__c/Deployment_Job__c.object-meta.xml
<CustomObject>
    <label>Deployment Job</label>
    <pluralLabel>Deployment Jobs</pluralLabel>
    <nameField>
        <type>AutoNumber</type>
        <label>Deployment Number</label>
        <displayFormat>DEP-{00000}</displayFormat>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>Status__c</fullName><label>Status</label><type>Picklist</type>
        <valueSet><valueSetDefinition>
            <value><fullName>Success</fullName><default>true</default></value>
            <value><fullName>Failed</fullName></value>
            <value><fullName>In Progress</fullName></value>
        </valueSetDefinition></valueSet>
    </fields>
    <fields>
        <fullName>Started_On__c</fullName><label>Started On</label><type>DateTime</type>
    </fields>
    <fields>
        <fullName>Finished_On__c</fullName><label>Finished On</label><type>DateTime</type>
    </fields>
    <fields>
        <fullName>Tests_Passed__c</fullName><label>Tests Passed</label><type>Number</type><precision>6</precision><scale>0</scale>
    </fields>
    <fields>
        <fullName>Tests_Failed__c</fullName><label>Tests Failed</label><type>Number</type><precision>6</precision><scale>0</scale>
    </fields>
</CustomObject>