force-app/main/default/objects/Deployment_Job__c/fields/Finished_On__c.field-meta.xml
<CustomField>
    <fullName>Finished_On__c</fullName>
    <description>Date and time when the deployment job completed. Used with Started On to calculate total deployment duration for release planning.</description>
    <inlineHelpText>When deployment finished</inlineHelpText>
    <label>Finished On</label>
    <type>DateTime</type>
</CustomField>