force-app/main/default/objects/Deployment_Job__c/fields/Started_On__c.field-meta.xml
<CustomField>
    <fullName>Started_On__c</fullName>
    <description>Date and time when the deployment job began execution. Used to calculate deployment duration and track release timing.</description>
    <inlineHelpText>When deployment started</inlineHelpText>
    <label>Started On</label>
    <type>DateTime</type>
</CustomField>