force-app/main/default/objects/Deployment_Job__c/fields/Tests_Failed__c.field-meta.xml
<CustomField>
    <fullName>Tests_Failed__c</fullName>
    <description>Count of Apex test methods that failed during the deployment. Any value greater than 0 indicates test failures that must be resolved before promoting to production.</description>
    <inlineHelpText>Number of tests that failed (target: 0)</inlineHelpText>
    <label>Tests Failed</label>
    <type>Number</type>
    <precision>6</precision>
    <scale>0</scale>
</CustomField>