force-app/main/default/objects/Deployment_Job__c/fields/Tests_Passed__c.field-meta.xml
<CustomField>
    <fullName>Tests_Passed__c</fullName>
    <description>Count of Apex test methods that passed during the deployment. Combined with Tests Failed, provides overall test coverage validation.</description>
    <inlineHelpText>Number of tests that passed</inlineHelpText>
    <label>Tests Passed</label>
    <type>Number</type>
    <precision>6</precision>
    <scale>0</scale>
</CustomField>